hphp/test/zend/good/Zend/tests/lsb_008.php.expectf

Fatal error: A name is expected here. in %s/lsb_008.php on line 2
